--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="60dp">
     <TextView
+        style="@style/Header"
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@id/message"/>
+        android:layout_below="@id/message"
+        android:divider="@null"/>
 
     </RelativeLayout>
 
