--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -1,42 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/post_news_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/post_news_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_small"
+        app:cardCornerRadius="12dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/margin_small"
+            app:cardCornerRadius="12dp">
 
     <com.android.volley.toolbox.NetworkImageView
-        style="@style/item"
         android:id="@+id/post_image_imageview"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:contentDescription="@string/news_image_of_lda"
+        android:scaleType="centerCrop"
         />
 
-    <TextView
-        style="@style/item"
-        android:id="@+id/post_date_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Date"
-        android:layout_below="@id/post_image_imageview"/>
+        </android.support.v7.widget.CardView>
 
-    <TextView
-        style="@style/Header"
-        android:id="@+id/post_title_textview"
+    <LinearLayout
+        android:id="@+id/post_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Header"
-        android:layout_toEndOf="@id/post_image_imageview"/>
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/post_title_textview"
+            style="@style/Header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Header" />
 
-    <TextView
-        style="@style/item"
-        android:id="@+id/post_text_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien. Nullam justo enim, consectetuer nec, ullamcorper ac, vestibulum in, elit. Maecenas libero. Fusce tellus odio, dapibus..."
-        android:layout_toEndOf="@id/post_image_imageview"
-        android:layout_below="@id/post_title_textview"/>
+        <TextView
+            android:id="@+id/post_date_textview"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Date" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/post_text_textview"
+            style="@style/item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien. Nullam justo enim, consectetuer nec, ullamcorper ac, vestibulum in, elit. Maecenas libero. Fusce tellus odio, dapibus..." />
+    </LinearLayout>
+    </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
