--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,13 @@
 
     <style name="Header">
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
-        <item name="android:layout_margin">6dp</item>
+        <item name="android:layout_marginStart">@dimen/margin_small</item>
+        <item name="android:layout_marginEnd">@dimen/margin_small</item>
+        <item name="android:layout_marginTop">@dimen/margin_small</item>
     </style>
 
     <style name="item">
-        <item name="android:layout_margin">6dp</item>
+        <item name="android:layout_margin">@dimen/margin_small</item>
     </style>
 
 </resources>
