--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/parent_layout_activities"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <TextView
+        style="@style/Header"
+        android:id="@+id/header_events"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="@string/title_closest_events"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/events_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/message"
-        android:divider="@null"/>
+        android:layout_below="@id/header_events"
+        android:layout_margin="@dimen/margin_small"
+        android:divider="@null"
+        android:orientation="vertical" />
+
+    </RelativeLayout>
 
 
     <android.support.design.widget.BottomNavigationView
@@ -26,7 +43,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation"
-        />
+        app:menu="@menu/navigation" />
 
 </android.support.constraint.ConstraintLayout>
