--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -7,14 +7,14 @@
     <RelativeLayout
         android:id="@+id/parent_layout_activities"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ProgressBar
             android:id="@+id/progress_bar_activities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:visibility="gone" />
+             />
 
         <TextView
             android:id="@+id/header_events"
@@ -23,9 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_closest_events"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/title_closest_events" />
 
 
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,5 +37,39 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/parent_layout_partners"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/parent_layout_activities"
+        >
+
+        <ProgressBar
+            android:id="@+id/progress_bar_partners"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/header_partners"
+            style="@style/Header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="@string/title_partners"/>
+
+
+        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/partners_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header_partners"
+            android:layout_margin="@dimen/margin_small"
+            android:divider="@null"
+            android:orientation="vertical" />
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
