--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -35,6 +35,38 @@
             android:divider="@null"
             android:orientation="vertical" />
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/empty_view_events"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header_events">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/empty_imageview_events"
+                android:layout_margin="@dimen/margin_small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_no_event"
+                />
+
+            <TextView
+                android:id="@+id/empty_textview_events"
+                style="@style/item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/no_events_planned"
+                android:gravity="center"/>
+
+
+
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </RelativeLayout>
 
     <RelativeLayout
