--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -21,7 +21,7 @@
             />
 
         <TextView
-            android:id="@+id/message"
+            android:id="@+id/header_posts"
             style="@style/Header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,9 +35,41 @@
             android:id="@+id/news_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/message"
+            android:layout_below="@id/header_posts"
             android:divider="@null"
             android:orientation="vertical" />
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/empty_view_posts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header_posts">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/empty_imageview_posts"
+                    android:layout_margin="@dimen/margin_small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_no_posts"
+                    />
+
+                <TextView
+                    android:id="@+id/empty_textview_posts"
+                    style="@style/item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_posts"
+                    android:gravity="center"/>
+
+
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
     </RelativeLayout>
