--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -8,7 +8,7 @@
 
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/city_pager"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -22,6 +22,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:tabTextAppearance="@style/MyCustomTabText"
         />
 
 </android.support.constraint.ConstraintLayout>
