--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -5,13 +5,14 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewsActivity">
+    tools:context=".ui.NewsFragment">
 
     <RelativeLayout
         android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="60dp">
+        android:layout_marginBottom="70dp"
+        android:background="@color/colorPrimarySide">
 
         <ProgressBar
             android:id="@+id/progress_bar_news"
@@ -29,7 +30,8 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/title_news"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/white"/>
 
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/news_list"
@@ -40,6 +42,9 @@
             android:orientation="vertical" />
 
         <android.support.v7.widget.CardView
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:id="@+id/empty_view_posts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
