--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -20,16 +20,15 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginBottom="@dimen/margin_small"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/margin_small"
+
             app:cardCornerRadius="7dp">
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/post_image_imageview"
         android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_height="match_parent"
         android:contentDescription="@string/news_image_of_lda"
         android:scaleType="centerCrop"
         />
@@ -47,7 +46,8 @@
             style="@style/Header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Header" />
+            tools:text="Header"
+            />
 
         <TextView
             android:id="@+id/post_date_textview"
